--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./prvni.js"></script>
+    <!-- <script src="./prvni.js"></script> -->
+    <script src="./druhy.js" ></script>
 </body>
 </html>
