--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <!-- <script src="./prvni.js"></script> -->
-    <script src="./druhy.js" ></script>
+    <!-- <script src="./druhy.js" ></script> -->
+    <!-- <script src="./treti.js"></script> -->
+    <script src="./ctverti.js"></script>
 </body>
 </html>
