--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./prvni.js"></script> -->
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
-    <script src="./ctverti.js"></script>
+    <!-- <script src="./ctverti.js"></script> -->
+    <script src="./paty.js"></script>
 </body>
 </html>
