--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
     <!-- <script src="./ctverti.js"></script> -->
-    <script src="./paty.js"></script>
+    <!-- <script src="./paty.js"></script> -->
+    <!-- <script src="./sesty.js"></script> -->
+    <!-- <script src="./sedmi.js"></script> -->
+    <!-- <script src="./osmi.js"></script> -->
+    <!-- <script src="./devati.js"></script> -->
+    <script src="./desat.js"></script>
 </body>
 </html>
