--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./sedmi.js"></script> -->
     <!-- <script src="./osmi.js"></script> -->
     <!-- <script src="./devati.js"></script> -->
-    <script src="./desat.js"></script>
+    <!-- <script src="./desat.js"></script> -->
+    <script src="./jedenacti.js"></script>
 </body>
 </html>
