--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- <script src="./osmi.js"></script> -->
     <!-- <script src="./devati.js"></script> -->
     <!-- <script src="./desat.js"></script> -->
-    <script src="./jedenacti.js"></script>
+    <!-- <script src="./jedenacti.js"></script> -->
+    <!-- <script src="./dvanact.js"></script> -->
+    <script src="./trinact.js"></script>
 </body>
 </html>
