--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- <script src="./desat.js"></script> -->
     <!-- <script src="./jedenacti.js"></script> -->
     <!-- <script src="./dvanact.js"></script> -->
-    <script src="./trinact.js"></script>
+    <!-- <script src="./trinact.js"></script> -->
+    <!-- <script src="./ctrnact.js"></script> -->
+    <!-- <script src="./patnacti.js"></script> -->
+    <script src="./sestnact.js"></script>
 </body>
 </html>
