--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <!-- <script src="./trinact.js"></script> -->
     <!-- <script src="./ctrnact.js"></script> -->
     <!-- <script src="./patnacti.js"></script> -->
-    <script src="./sestnact.js"></script>
+    <!-- <script src="./sestnact.js"></script> -->
+    <!-- <script src="./sedmnacti.js"></script> -->
+    <!-- <script src="./osmnacti.js"></script> -->
+    <!-- <script src="./devatnacti.js"></script> -->
+    <!-- <script src="./dvacati.js"></script> -->
+    <script src="./dvacatprvni.js"></script>
 </body>
 </html>
