--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="./osmnacti.js"></script> -->
     <!-- <script src="./devatnacti.js"></script> -->
     <!-- <script src="./dvacati.js"></script> -->
-    <script src="./dvacatprvni.js"></script>
+    <!-- <script src="./dvacatprvni.js"></script> -->
+    <script src="./dvacatdruhy.js"></script>
 </body>
 </html>
