--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="./prvni.js"></script> -->
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
-    <!-- <script src="./ctverti.js"></script> -->
+    <script src="./ctverti.js"></script>
     <!-- <script src="./paty.js"></script> -->
     <!-- <script src="./sesty.js"></script> -->
     <!-- <script src="./sedmi.js"></script> -->
@@ -28,6 +28,6 @@
     <!-- <script src="./dvacati.js"></script> -->
     <!-- <script src="./dvacatprvni.js"></script> -->
     <!-- <script src="./dvacatdruhy.js"></script> -->
-    <script src="./dvadcattreti.js"></script>
+    <!-- <script src="./dvadcattreti.js"></script> -->
 </body>
 </html>
