--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="./prvni.js"></script> -->
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
-    <script src="./ctverti.js"></script>
+    <!-- <script src="./ctverti.js"></script> -->
     <!-- <script src="./paty.js"></script> -->
     <!-- <script src="./sesty.js"></script> -->
     <!-- <script src="./sedmi.js"></script> -->
@@ -29,5 +29,7 @@
     <!-- <script src="./dvacatprvni.js"></script> -->
     <!-- <script src="./dvacatdruhy.js"></script> -->
     <!-- <script src="./dvadcattreti.js"></script> -->
+    <script src="./dvactctverti.js"></script>
+    <script src="/dvacetpati.js"></script>
 </body>
 </html>
