--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- <script src="./dvacatdruhy.js"></script> -->
     <!-- <script src="./dvadcattreti.js"></script> -->
     <script src="./dvactctverti.js"></script>
-    <script src="/dvacetpati.js"></script>
+    <!-- <script src="/dvacetpati.js"></script> -->
+    <!-- <script src="./dvactsesti.js"></script> -->
 </body>
 </html>
