--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <!-- <script src="./dvacatprvni.js"></script> -->
     <!-- <script src="./dvacatdruhy.js"></script> -->
     <!-- <script src="./dvadcattreti.js"></script> -->
-    <script src="./dvactctverti.js"></script>
+    <!-- <script src="./dvactctverti.js"></script> -->
     <!-- <script src="/dvacetpati.js"></script> -->
     <!-- <script src="./dvactsesti.js"></script> -->
+    <script src="dvadcatsedmi.js"></script>
 </body>
 </html>
