--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- <script src="./dvactctverti.js"></script> -->
     <!-- <script src="/dvacetpati.js"></script> -->
     <!-- <script src="./dvactsesti.js"></script> -->
-    <script src="dvadcatsedmi.js"></script>
+    <!-- <script src="dvadcatsedmi.js"></script> -->
+     <script src="./dvacetosmi.js"></script>
 </body>
 </html>
