--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- <script src="/dvacetpati.js"></script> -->
     <!-- <script src="./dvactsesti.js"></script> -->
     <!-- <script src="dvadcatsedmi.js"></script> -->
-     <script src="./dvacetosmi.js"></script>
+     <!-- <script src="./dvacetosmi.js"></script> -->
+      <!-- <script src="./dvacetdevat.js"></script> -->
+       <!-- <script src="./tridcet.js"></script> -->
+        <!-- <script src="./tridcetjeden.js"></script> -->
 </body>
 </html>
