--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
       <!-- <script src="./dvacetdevat.js"></script> -->
        <!-- <script src="./tridcet.js"></script> -->
         <!-- <script src="./tridcetjeden.js"></script> -->
+         <!-- <script src="./tricetdva.js" type="module"></script> -->
+         <script src="./tricetri.js"></script>
 </body>
 </html>
