--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+      
     <!-- <script src="./prvni.js"></script> -->
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
@@ -38,6 +39,6 @@
        <!-- <script src="./tridcet.js"></script> -->
         <!-- <script src="./tridcetjeden.js"></script> -->
          <!-- <script src="./tricetdva.js" type="module"></script> -->
-         <script src="./tricetri.js"></script>
+         <!-- <script src="./tricetri.js"></script> -->
 </body>
 </html>
