--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         <!-- <script src="./tridcetjeden.js"></script> -->
          <!-- <script src="./tricetdva.js" type="module"></script> -->
          <!-- <script src="./tricetri.js"></script> -->
+          <script src="./34.js"></script>
 </body>
 </html>
