--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style>
+      li {
+        padding: 15px;
+        border-radius: 10px;
+        margin: 15px 0;
+        color: white;
+      } 
+      li.done{
+        background-color: green;
+      }
+      li.in-progress{
+        background-color: red;
+      }
+    </style> -->
 </head>
 <body>
     <ul class="todolist"></ul>
