--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
          <!-- <script src="./tricetdva.js" type="module"></script> -->
          <!-- <script src="./tricetri.js"></script> -->
           <!-- <script src="./34.js"></script> -->
-          <script src="./35.js"></script>
+          <!-- <script src="./35.js"></script> -->
+           <script type="module" src="./36.js"></script>
 </body>
 </html>
