--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
          <!-- <script src="./tricetri.js"></script> -->
           <!-- <script src="./34.js"></script> -->
           <!-- <script src="./35.js"></script> -->
-           <script type="module" src="./36.js"></script>
+           <!-- <script type="module" src="./36.js"></script> -->
+            <script type="module" src="./37.js"></script>
 </body>
 </html>
