--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <ul class="todolist"></ul>
+    <!-- <script src="./37.html"></script> -->
     <!-- <script src="./prvni.js"></script> -->
     <!-- <script src="./druhy.js" ></script> -->
     <!-- <script src="./treti.js"></script> -->
@@ -58,6 +59,10 @@
           <!-- <script src="./35.js"></script> -->
            <!-- <script type="module" src="./36.js"></script> -->
             <!-- <script type="module" src="./37.js"></script> -->
-            <script type="module" src="./38.js"></script>
+            <!-- <script type="module" src="./38.js"></script> -->
+            <!-- <script type="module" src="./39.js"></script> -->
+<script type="module" src="./40.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
-</html>
+</html> 
